# hermes-shell

./: README.md  install.sh  pyproject.toml
examples/: getty-override.conf  sshd_config.fragment
hermes_shell/: __init__.py  shell.py  system_prompt.txt
scripts/: install-local.sh
tests/: test_shell.py
